--- a/html/politica.html
+++ b/html/politica.html
@@ -50,10 +50,19 @@ $(document).ready(function() {
 
                 let divpolitica = "<div class='not'><h1 class='titnoticia'>"+plc[i].TITULO+"</h1>"+
                     "<img class='imgnot' height='200px' width='300px' src='"+'../'+plc[i].IMAGEM+"'>"+
-                    "<P class='textnot'>"+plc[i].TEXTO+"</p></div>";            
+                    "<P class='textnot'>"+plc[i].TEXTO+"</p>"+
+                    "<div id='like'> <ul> <li class='click' data-like-count='0'>Gostei  <img src='../imagens/likes.png' click='click()'></a></li> <li class='like'>0 Curtidas</li> </ul> </div></div>";        
             $("#plt").append(divpolitica);
 
             }
+            $(".click").on('click', function() {
+            var count = parseInt($(this).attr("data-like-count"));
+            count++;
+            $(this).css('opacity', "0.7");
+            $(this).next().html(count + " Curtidas");
+            $(this).off(event);
+            $(this).attr("data-like-count", count);
+        });
 
         });
     });
