--- a/index.html
+++ b/index.html
@@ -69,30 +69,49 @@
             $(document).ready(function() {
                 $.getJSON('json/noticia.json', function(data) {
                     //carrega noticias
+                    let pcpl = data.NOTICIAS.PRINCIPAL;
                     let plc = data.NOTICIAS.POLITICA;
                     let edc = data.NOTICIAS.EDUCACAO;
                     let sud = data.NOTICIAS.SAUDE;
 
                     let divpolitica = "<div class='not'><h1 class='titnoticia'>"+plc[r].TITULO+"</h1>"+
                             "<img class='imgnot' height='200px' width='300px' src='"+plc[r].IMAGEM+"'>"+
-                            "<P class='textnot'>"+plc[r].TEXTO+"</p></div>";            
+                            "<P class='textnot'>"+plc[r].TEXTO+"</p></div>"+
+                            "<div id='like'> <ul> <li class='click' data-like-count='0'>Gostei  <img src='imagens/likes.png' click='click()'></a></li> <li class='like'>0 Curtidas</li> </ul> </div>";           
                     $("#plt").append(divpolitica);
 
 
                     let divedc = "<div class='not'><h1 class='titnoticia'>"+edc[r].TITULO+"</h1>"+
                             "<img class='imgnot' height='200px' width='300px' src='"+edc[r].IMAGEM+"'>"+
-                            "<P class='textnot'>"+edc[r].TEXTO+"</p></div>";
+                            "<P class='textnot'>"+edc[r].TEXTO+"</p></div>"+
+                            "<div id='like'> <ul> <li class='click' data-like-count='0'>Gostei  <img src='imagens/likes.png' click='click()'></a></li> <li class='like'>0 Curtidas</li> </ul> </div>";
                     $("#edu").append(divedc);
 
                     let divsaude = "<div class='not'><h1 class='titnoticia'>"+sud[r].TITULO+"</h1>"+
                             "<img class='imgnot' height='200px' width='300px' src='"+sud[r].IMAGEM+"'>"+
-                            "<P class='textnot'>"+sud[r].TEXTO+"</p></div>";
+                            "<P class='textnot'>"+sud[r].TEXTO+"</p></div>"+
+                            "<div id='like'> <ul> <li class='click' data-like-count='0'>Gostei  <img src='imagens/likes.png' click='click()'></a></li> <li class='like'>0 Curtidas</li> </ul> </div>";
                     $("#sd").append(divsaude);
 
+                    let divprincipal = "<div class='notp'><h1 class='titnoticiap'>"+pcpl[r].TITULO+"</h1>"+
+                            "<img class='imgnot' height='200px' width='300px' src='"+pcpl[r].IMAGEM+"'>"+
+                            "<P class='textnotp'>"+pcpl[r].TEXTO+"</p></div>"+
+                            "<div id='like'> <ul> <li class='click' data-like-count='0'>Gostei  <img src='imagens/likes.png' click='click()'></a></li> <li class='like'>0 Curtidas</li> </ul> </div>";
+                    $("#pcp").append(divprincipal);
 
-
+                    $(".click").on('click', function() {
+            var count = parseInt($(this).attr("data-like-count"));
+            count++;
+            $(this).css('opacity', "0.7");
+            $(this).next().html(count + " Curtidas");
+            $(this).off(event);
+            $(this).attr("data-like-count", count);
+        });
             });
         });
+
+
+
 
     </script>
 
